--- a/main/static/css/crew.css
+++ b/main/static/css/crew.css
@@ -14,11 +14,14 @@
 }
 
 .camera-set {
-    border: 2px dotted black;
+    /*border: 1px solid blue;*/
     display: inline-block;
     padding: 1.5%;
     width: 45%;
-    margin: auto;
+    float: left;
+    margin-right: 0px;
+    margin-bottom: 3%;
+    /*margin-right: 11%;*/
 }
 
 .camera-set img {
@@ -27,10 +30,12 @@
 }
 
 .crew-coworkers {
-    /*border: 1px solid black;    */
+    /*border: 1px solid red;    */
     width: 10%;
-    height: 11%;
+    height: 20%;
     display: inline-block;
+    text-align: right;
+    float: left;
     margin-left: 20%;
     margin-right: 1%;
     padding: .5%;
@@ -78,15 +83,18 @@
 }
 
 .crew-number {
+    /*border: 1px solid green;*/
     color: #FFEBCD;
     font-family: "Open Sans Condensed", sans-serif;
     font-size: 65px;
     font-weight: bold;
     line-height: 70px;
+    text-align: left;
     display: block;
 }
 
 .crew-details {
+    /*border: 1px solid green;*/
     color: #FFEBCD;
     font-family: "Open Sans Condensed", sans-serif;
     font-size: 15px;
